--- a/front/main.html
+++ b/front/main.html
@@ -13,6 +13,7 @@
   </head>
 
   <body>
+    <h2>Frame them!</h2>
     <div class="formcontainer">
       <form>
         <input
@@ -36,5 +37,6 @@
     <div class="container"></div>
 
     <script type="text/javascript" src="/main.js"></script>
+    <foot> <a href="https://github.com/southchen">Made by Nan 📷⌨️</a></foot>
   </body>
 </html>
