--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
     <div class="container"></div>
 
-    <script type="text/javascript" src="/main.js"></script>
+    <script type="text/javascript" src="main.js"></script>
     <foot> <a href="https://github.com/southchen">Made by Nan 📷⌨️</a></foot>
   </body>
 </html>
