--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="Access-Control-Allow-Origin" content="*" />
     <meta http-equiv="Content-Language" content="en" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link
       href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/components/button.min.css"
       rel="stylesheet"
