--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/components/button.min.css"
       rel="stylesheet"
     />
-    <title>Suare Photo with Dominant-Color-Frame</title>
+    <title>Dominant-Color-Frame for ins/friend-cicrle</title>
   </head>
 
   <body>
