--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   </head>
 
   <body>
-    <h2>Frame them!</h2>
+    <h2>🌈<span>Frame them!!</span>🖼</h2>
     <div class="formcontainer">
-      <form>
+      <form class="form">
         <input
           type="file"
           name="img"
@@ -27,13 +27,15 @@
 
         <br />
       </form>
-      <button class="ui blue button" id="add">
-        Add shadow
-      </button>
-      <button class="ui teal button" id="remove">
-        Remove shadow
-      </button>
-      <button class="ui olive button" id="download">Download All</button>
+      <div class="buttons">
+        <button class="ui blue button" id="add">
+          Add shadow
+        </button>
+        <button class="ui teal button" id="remove">
+          Remove shadow
+        </button>
+        <button class="ui olive button" id="download">Download All</button>
+      </div>
     </div>
 
     <div class="container"></div>
