--- a/index.html
+++ b/index.html
@@ -1,1 +1,46 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta http-equiv=Access-Control-Allow-Origin content=*><meta http-equiv=Content-Language content=en><link rel=stylesheet href=style.css><link rel=icon href=favicon.ico type=image/x-icon><link rel="shortcut icon" href=favicon.ico type=image/x-icon><link href=https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/components/button.min.css rel=stylesheet><title>Dominant-Color-Frame for ins/friend-cicrle</title></head><body><h2>🌈<span>Frame them!!</span>🖼</h2><div class=formcontainer><form class=form><input type=file name=img multiple=multiple onchange=handleFiles(this.files)><br></form><div class=buttons><button class="ui blue button" id=add>Add shadow</button> <button class="ui teal button" id=remove>Remove shadow</button> <button class="ui olive button" id=download>Download All</button></div></div><div class=container></div><foot><a href=https://github.com/southchen>Made by Nan 📷⌨️</a></foot><script src=bundle.js></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta http-equiv="Access-Control-Allow-Origin" content="*" />
+    <meta http-equiv="Content-Language" content="en" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link
+      href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/components/button.min.css"
+      rel="stylesheet"
+    />
+    <title>Dominant-Color-Frame for ins/friend-cicrle</title>
+  </head>
+
+  <body>
+    <h2>🌈<span>Frame them!!</span>🖼</h2>
+    <div class="formcontainer">
+      <form class="form">
+        <input
+          type="file"
+          name="img"
+          multiple
+          onchange="handleFiles(this.files)"
+        />
+
+        <br />
+      </form>
+      <div class="buttons">
+        <button class="ui blue button" id="add">
+          Add shadow
+        </button>
+        <button class="ui teal button" id="remove">
+          Remove shadow
+        </button>
+        <button class="ui olive button" id="download">Download All</button>
+      </div>
+    </div>
+
+    <div class="container"></div>
+
+    <script type="text/javascript" src="main.js"></script>
+    <foot> <a href="https://github.com/southchen">Made by Nan 📷⌨️</a></foot>
+  </body>
+</html>
