--- a/index.html
+++ b/index.html
@@ -18,13 +18,8 @@
     <h2>🌈<span>Frame them!!</span>🖼</h2>
     <div class="formcontainer">
       <form class="form">
-        <input
-          type="file"
-          name="img"
-          multiple
-          onchange="handleFiles(this.files)"
-        />
-
+        <input type="file" name="img" multiple id="imageUpload" />
+        <!-- onchange="handleFiles(this.files)" -->
         <br />
       </form>
       <div class="buttons">
@@ -40,7 +35,8 @@
 
     <div class="container"></div>
 
-    <script type="text/javascript" src="main.js"></script>
+    <!-- <script type="text/javascript" src="main.js"></script> -->
+    <script src="oop.js"></script>
     <foot> <a href="https://github.com/southchen">Made by Nan 📷⌨️</a></foot>
   </body>
 </html>
