--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
           Remove shadow
         </button>
         <button class="ui olive button" id="download">Download All</button>
+        <button class="ui pink button" id="refresh">Refresh</button>
       </div>
     </div>
 
     <div class="container"></div>
-
-    <!-- <script type="text/javascript" src="main.js"></script> -->
-    <script src="oop.js"></script>
-    <foot> <a href="https://github.com/southchen">Made by Nan 📷⌨️</a></foot>
+    <script src="./oop.js"></script>
+    <foot> <a href="https://github.com/southchen">Made by Nan 📷</a></foot>
   </body>
 </html>
