Update style & folder structure

--- a/index.html
+++ b/index.html
@@ -1,21 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="Access-Control-Allow-Origin" content="*" />
-    <meta http-equiv="Content-Language" content="en" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="favicon.ico" type="image/x-icon" />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <link
-      href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/components/button.min.css"
-      rel="stylesheet"
-    />
-    <title>Dominant-Color-Frame for ins/friend-cicrle</title>
-  </head>
 
-  <body>
-    <h2>🌈<span>Frame them!!</span>🖼</h2>
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="Access-Control-Allow-Origin" content="*" />
+  <meta http-equiv="Content-Language" content="en" />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+  <link href="https://cdn.bootcdn.net/ajax/libs/semantic-ui/2.4.1/components/button.min.css" rel="stylesheet" />
+  <title>Dominant-Color-Frame for ins/friend-cicrle</title>
+</head>
+
+<body>
+  <h2>🌈<span> Frame it </span>🖼</h2>
+  <main>
     <div class="formcontainer">
       <form class="form">
         <input type="file" name="img" multiple id="imageUpload" />
@@ -35,7 +34,12 @@
     </div>
 
     <div class="container"></div>
-    <script src="./oop.js"></script>
-    <foot> <a href="https://github.com/southchen">Made by Nan 📷</a></foot>
-  </body>
+  </main>
+  <script src="./oop.js"></script>
+  <footer>
+    <a href="https://github.com/southchen">Made by Nan<img src="./public/logo.png" alt="Nan's logo" class="logo" />
+    </a>
+  </footer>
+</body>
+
 </html>
